5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1594_1800.log
== TEST (2019-03-19 16:17:25) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2+b**2+c**2))
denomidador=(int(a+b+c))
print(round(nuerador/denominador, 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(nuerador/denominador, 6))
NameError: name 'nuerador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:17:39) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2+b**2+c**2))
denomidador=(int(a+b+c))
print(round((nuerador/denominador), 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((nuerador/denominador), 6))
NameError: name 'nuerador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:17:46) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2+b**2+c**2))
denomidador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round((numerador/denominador), 6))
NameError: name 'denominador' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:00) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2+b**2+c**2))
denominador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- OUTPUT:
3.222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:18:06) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2+b**2+c**2))
denominador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- EXECUTION TIME:
0.193433
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
3.222222
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
3.222222
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3.222222
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:18:48) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2)+(b**2)+(c**2))
denominador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- OUTPUT:
3.222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:18:50) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2)+(b**2)+(c**2))
denominador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- EXECUTION TIME:
0.184816
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
3.222222
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
3.222222
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
3.222222
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:36) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2)+(b**2)+(c**2))
denominador=(int(a+b+c))
print(round((numerador//denominador), 6))

-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:19:40) 
-- CODE:
a=2
b=3
c=4
numerador=(int(a**2)+(b**2)+(c**2))
denominador=(int(a+b+c))
print(round((numerador/denominador), 6))

-- OUTPUT:
3.222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:20:33) 
-- CODE:
a=2
b=3
c=4
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- OUTPUT:
3.222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:28) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:21:30) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- EXECUTION TIME:
0.109968
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:37) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:21:39) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- EXECUTION TIME:
0.142383
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:21:47) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:00) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), ))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:01) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), ))

-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:22:06) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 7))

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:22:08) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 7))

-- EXECUTION TIME:
0.181526
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:23:03) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:23:06) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- EXECUTION TIME:
0.196819
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:23:10) 
-- CODE:
a=1
b=2
c=3
resultado=(int(a**2)+(b**2)+(c**2))/(a+b+c)
print(round((resultado), 6))

-- EXECUTION TIME:
0.176784
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:44:25) 
-- CODE:
a=1
b=2
c=3
d=(a+b+c)
resultado=(int(a**2)+(b**2)+(c**2))/d
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:44:27) 
-- CODE:
a=1
b=2
c=3
d=(a+b+c)
resultado=(int(a**2)+(b**2)+(c**2))/d
print(round((resultado), 6))

-- EXECUTION TIME:
0.261338
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:44:34) 
-- CODE:
a=1
b=2
c=3
d=(a+b+c)
resultado=(int(a**2)+(b**2)+(c**2))/d
print(round((resultado), 6))

-- OUTPUT:
2.333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 16:34:57) 
-- CODE:
var1=float(input("a:"))
var2=float(input("b:"))
var3=float(input("c:"))
x=((var1**2)+(var2**2)+(var3**2))/(var1+var2+var3)
print(round(x, 7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 16:35:06) 
-- CODE:
var1=float(input("a:"))
var2=float(input("b:"))
var3=float(input("c:"))
x=((var1**2)+(var2**2)+(var3**2))/(var1+var2+var3)
print(round(x, 7))
-- EXECUTION TIME:
0.157689
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
